@@ -7,7 +7,7 @@
  * "License"); you may not use this file except in compliance
  * with the License.  You may obtain a copy of the License at
  *
- *   http://www.apache.org/licenses/LICENSE-2.0
+ *   https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
@@ -62,9 +62,7 @@ public class JavaLanguageOutput extends FreemarkerLanguageOutput {
 
     @Override
     protected List<Template> getComplexTypeTemplates(Configuration freemarkerConfiguration) throws IOException {
-        return Arrays.asList(
-            freemarkerConfiguration.getTemplate("templates/java/pojo-template.java.ftlh"),
-            freemarkerConfiguration.getTemplate("templates/java/io-template.java.ftlh"));
+        return List.of(freemarkerConfiguration.getTemplate("templates/java/complex-type-template.java.ftlh"));
     }
 
     @Override
